# remote-shell-mcp-server

./: .gitignore  LICENSE  README.md  debug_mcp.py  debug_mcp_2.py  development_plan.md  execute_remote.py  functional_spec.md  inspect_auth.py  inspect_mcp.py  inspect_mcp_security.py  main.py  pyproject.toml  remote_main.py  requirements.txt  start_remote_server.sh  test_auth.py  test_client.py  test_curl.sh  test_curl_fixed.sh  test_mcp_client.py
config/: example.json  remote_config.json
docs/: curl_examples.md  quickstart.md  remote_server.md  usage.md
examples/: client_example.py  simple_test.py  websocket_client.py
mcp_ssh_server/: __init__.py  config.py  remote_server.py  security.py  server.py  session_manager.py  ssh_manager.py
src/: ssh_manager.py
src/models/: __init__.py  command.py  connection.py  file.py
tests/: conftest.py  test_basic_functionality.py  test_core_logic.py  test_mcp_ssh_server.py  test_models.py  test_python_path.py  test_simple.py  test_simple_core.py  test_ssh_manager.py  test_with_mocks.py
