[project]
name = "mcp-ssh-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.25.0",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "aiohttp>=3.8.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_ssh_server"]
